--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -2,23 +2,27 @@ body {
     height: 100%;
     background-color: #F0EFF2;
 }
+
 .content {
     margin: 0 auto;
     text-align: center;
     width: 900px;
 }
+
 .title {
     display: flex;
     margin-top: 90px;
     text-align: left;
 }
+
 h1 {
     font-family: Inter;
     font-weight: 700;
     font-size: 30px;
     margin-left: 20px;
-       
+
 }
+
 .top-content {
     width: 900px;
     height: 60px;
@@ -28,11 +32,13 @@ h1 {
     background-color: #fff;
     border-radius: 10px;
 }
-.months {
+
+.days {
     display: flex;
     justify-content: space-between;
 }
-.month-link {
+
+.day-link {
     display: inline-block;
     font-size: 16px;
     color: #737373;
@@ -41,15 +47,16 @@ h1 {
     font-weight: 700;
     margin-top: 20px;
 }
-.last-month,
-.this-month,
-.next-month {
+
+.last-day,
+.today,
+.next-day {
     display: flex;
     justify-content: center;
-    
+
 }
 
-.this-month {
+.today {
     font-family: Inter;
     font-size: 20px;
 }
@@ -57,18 +64,22 @@ h1 {
 .image {
     margin-top: 15px;
 }
+
 .img {
     margin-top: 7px;
 }
+
 .date {
     font-family: Inter;
     font-weight: 700;
     font-size: 20px;
 }
+
 table {
     border-collapse: collapse;
     margin-bottom: 30px;
 }
+
 .under-content {
     width: 900px;
     margin: 0 auto;
@@ -76,7 +87,10 @@ table {
     margin-top: 46px;
     background-color: #fff;
     border-radius: 10px;
-    
+
+}
+th, td {
+    padding: 5px 0;
 }
 .data-label,
 .data-item {
@@ -85,52 +99,35 @@ table {
     font-size: 16px;
     color: #737373;
 }
+
 .data-label {
-    border-bottom:3px solid #E1E1E1;
+    border-bottom: 3px solid #E1E1E1;
 }
 
 .data-item {
-    border-bottom:2px solid #E1E1E1;
+    border-bottom: 2px solid #E1E1E1;
 }
+
 .data-link {
     text-decoration: none;
     color: #000;
 }
-.button {
-    text-align: right;
-}
-.csv-btn {
-    width: 184px;
-     height: 50px;
-    border-radius: 5px;
-    background-color: #000;
-    color: #fff;
-    font-family: Inter;
-    font-weight: 700;
-    font-size: 22px;
-    cursor: pointer;   
-
-}
 @media screen and (min-width: 768px) and (max-width: 850px) {
     .content {
-        width:90% ;
+        width: 90%;
     }
+
     .title {
         margin-left: 5%;
     }
-    
+
     .top-content {
         width: 90%;
     }
+
     .under-content {
         width: 90%;
     }
-    .button {
-        margin-right: 5%;
-    }
-    .csv-btn {
-        width: 20%;
-        font-size: 20px;
-        cursor: pointer;
-    }
+
+    
 }
