--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -39,7 +39,7 @@ h1 {
     text-decoration: none;
     font-family: Inter;
     font-weight: 700;
-    margin-top: 20px;
+    margin-top: 17px;
 }
 .last-month,
 .this-month,
@@ -55,7 +55,7 @@ h1 {
 }
 
 .image {
-    margin-top: 15px;
+    margin-top: 13px;
 }
 .img {
     margin-top: 7px;
@@ -76,7 +76,10 @@ table {
     margin-top: 46px;
     background-color: #fff;
     border-radius: 10px;
-    
+}
+th,
+td {
+    padding: 5px 0;
 }
 .data-label,
 .data-item {
