--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -34,7 +34,8 @@ img {
 
 .header-nav {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    justify-content: end;
     width: 41vw;
     margin-left: 2%;
     align-items: center;
@@ -53,11 +54,9 @@ li {
     font-weight: 400;
     width: 135px;
     cursor: pointer;
-
-font-size: 24px;
-
-padding-top: 5px;
-margin-right: 20px;
+    font-size: 24px;
+    padding-top: 5px;
+    margin-right: 20px;
 }
 
 .header-nav-link {
@@ -69,7 +68,7 @@ margin-right: 20px;
     font-weight: 400;
     text-align: center;
     font-size: 25px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 @media screen and (min-width: 1400px) and (max-width: 1540px) {
@@ -79,7 +78,7 @@ margin-right: 20px;
 
     .header-nav-link {
         font-size: 25px;
-        margin-right: 20px;
+        margin-right: 40px;
     }
 
     .btn {
@@ -94,8 +93,8 @@ margin-right: 20px;
         padding: 14px 15px;
     }
     .header-nav {
-            display: flex;
-            justify-content: center;
+            /* display: flex; */
+            /* justify-content: center; */
             width: 42vw;
             /* margin-left: 2%; */
             align-items: center;
