勤怠詳細ページ2

--- a/src/public/css/approve.css
+++ b/src/public/css/approve.css
@@ -12,6 +12,7 @@ body {
 .title {
     display: flex;
     margin-top: 90px;
+    margin-bottom: 55px;
     text-align: left;
 }
 
@@ -76,7 +77,9 @@ td {
 .year {
     margin-left: 26px;
 }
-
+.day {
+    margin-left: 10px;
+}
 .date-space {
     flex-grow: 1;
     /* 自動的に空間を調整 */
@@ -137,6 +140,7 @@ td {
     font-size: 18px;
     color: rgba(255, 0, 0, 0.5);
     text-align: right;
+    margin-bottom: 120px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 850px) {
