--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -12,6 +12,7 @@ body {
 .title {
     display: flex;
     margin-top: 90px;
+    margin-bottom: 47px;
     text-align: left;
 }
 
@@ -26,9 +27,9 @@ h1 {
 .top-content {
     width: 900px;
     height: 60px;
-    margin: 0 auto;
+    margin: 0 auto ;
     text-align: center;
-    margin-top: 27px;
+    /* margin-top: 27px; */
     background-color: #fff;
     border-radius: 10px;
 }
@@ -82,7 +83,7 @@ table {
 
 .under-content {
     width: 900px;
-    margin: 0 auto;
+    margin: 0 auto 300px;
     text-align: center;
     margin-top: 46px;
     background-color: #fff;
