管理者修正画面の修正

--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -110,6 +110,10 @@ input {
     font-size: 16px;
 
 }
+.date-input {
+    border: none;
+    text-align: center;
+}
 .time-input {
     text-align: center;
 }
