--- a/src/public/css/verify-email.css
+++ b/src/public/css/verify-email.css
@@ -43,7 +43,6 @@ p:nth-of-type(2) {
 
 .btn-primary {
     display: block;
-    margin-top: 52px;
     font-size: 20px;
     font-family: Intel;
     font-weight: 400;
@@ -52,6 +51,6 @@ p:nth-of-type(2) {
     height: 50px;
     padding-top: 20px;
     background-color: #fff;
-    margin-left: 210px;
     border: none;
+    margin: 52px 0 368px 210px;
 }
